--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@ nav .container .logo input {
   border-radius: 5px;
   animation: spinner 1.8s ease-in-out infinite;
 }
+.process{
+  position: absolute;
+  top: 39%;
+  left: 37%;
+}
 
 .loading::before {
   left: 10px;
